# dbset

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
dbset/docs/: dbset_en.md  dbset_ru.md
dbset/src/dbset/: __init__.py  async_core.py  connection.py  exceptions.py  query.py  schema.py  sql_validator.py  sync_core.py  types.py  validators.py
dbset/tests/: test_async_core.py  test_decimal_support.py  test_dummy.py  test_index_management.py  test_query.py  test_sync_core.py  test_types.py  test_uuid_pk.py
