[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbset"
version = "1.0.7"
description = "Sync & Async-ready SQLAlchemy wrapper with autoschema support for simplified database operations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Veaceslav Kunitki"}]
keywords = ["database", "sqlalchemy", "async", "postgresql", "sqlite", "orm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Database",
]

dependencies = [
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.29.0"]
psycopg2 = ["psycopg2-binary>=2.9.9"]
aiosqlite = ["aiosqlite>=0.19.0"]
postgres = ["asyncpg>=0.29.0", "psycopg2-binary>=2.9.9"]
all = ["asyncpg>=0.29.0", "psycopg2-binary>=2.9.9", "aiosqlite>=0.19.0"]
dev = ["pytest>=8.0,<9.0", "pytest-asyncio>=0.23.0,<1.0.0", "aiosqlite>=0.19.0"]

[tool.setuptools.packages.find]
where = ["dbset/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["dbset/src"]
